--- a/style.css
+++ b/style.css
@@ -1,10 +1,24 @@
 body{
-  margin: 100px;
+  margin: 0px;
   padding: 0px;
   height: 100vh;
   justify-content: center;
   align-items: center;
   display: flex;
+
+}
+
+.header {
+  margin-top: 0px;
+  /* background-color: #adadad; */
+  align-self: baseline;
+  justify-self: baseline;
+}
+
+.cgbn-logo {
+  margin-left: 20px;
+  width: 20px;
+  height: auto;
 }
 
 .button {
