--- a/style.css
+++ b/style.css
@@ -2,10 +2,10 @@ body{
   margin: 0px;
   padding: 0px;
   height: 100vh;
+  width: 100vw;
   justify-content: center;
   align-items: center;
   display: flex;
-
 }
 
 .header {
