--- a/style.css
+++ b/style.css
@@ -2,17 +2,17 @@ body{
   margin: 0px;
   padding: 0px;
   height: 100vh;
-  width: 100vw;
+  width: 100vw; 
   justify-content: center;
   align-items: center;
   display: flex;
 }
 
 .header {
-  margin-top: 0px;
+  position: absolute;
+  margin-top: -85vh;
+  margin-left: -90vw;
   /* background-color: #adadad; */
-  align-self: baseline;
-  justify-self: baseline;
 }
 
 .cgbn-logo {
@@ -32,7 +32,7 @@ body{
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   text-transform: uppercase;
-  width: 250px;
+  width: 20%;
   height: 120px;
   border-radius: 20px;
   cursor: pointer;
