--- a/style.css
+++ b/style.css
@@ -10,8 +10,8 @@ body{
 
 .header {
   position: absolute;
-  margin-top: -85vh;
-  margin-left: -90vw;
+  top: 15px;
+  left: 5px;
   /* background-color: #adadad; */
 }
 
@@ -22,6 +22,7 @@ body{
 }
 
 .button {
+  flex-wrap: wrap;
   background-color: #cd1a11; /* white */
   border: none;
   color: white;
@@ -32,7 +33,7 @@ body{
   font-family: "Roboto", sans-serif;
   font-weight: bold;
   text-transform: uppercase;
-  width: 20%;
+  width: 250px;
   height: 120px;
   border-radius: 20px;
   cursor: pointer;
