--- a/style.css
+++ b/style.css
@@ -25,11 +25,12 @@ body{
 
 .button-container {
   position: absolute;
-  border-top: 200px;
+  border-top: 250px;
+  margin-top: 150px;
 }
 
 .button {
-  flex-grow: 0.2;
+  flex-shrink: 0.5;
   background-color: #cd1a11; /* white */
   border: none;
   color: white;
