--- a/style.css
+++ b/style.css
@@ -88,10 +88,10 @@ body {
     position: absolute;
     z-index: 10;
     background-color: #cd1a11;
-    width: 101vw;
-    height: 101vh;
+    width: 100%;
+    height: 100%;
     top: 0px;
-    left: 101vw;
+    left: 100vw;
     transition: 0.35s;
     transition-property: all;
     display: flex;
