--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
     overflow-x: hidden;
     overflow-y: hidden;
+    overflow: hidden;
 }
 
 .main-container {
@@ -85,6 +86,7 @@ body {
 }
 
 .hamburger-menu-container {
+    overflow: hidden;
     position: absolute;
     z-index: 10;
     background-color: #cd1a11;
