--- a/style.css
+++ b/style.css
@@ -4,6 +4,22 @@ body {
     overflow: hidden;
 }
 
+.light-mode {
+    --cgbn-red: #cd1a11;
+    --cgbn-red-hover-dark: #85130c;
+    --cgbn-red-hover-light: #f0a8a4;
+    --hamburger-hover: #AAAAAA;
+    --text: #FFFFFF;
+}
+
+.dark-mode {
+    --cgbn-red: #cd1a11;
+    --cgbn-red-hover-dark: #85130c;
+    --cgbn-red-hover-light: #f0a8a4;
+    --hamburger-hover: #AAAAAA;
+    --text: #FFFFFF;
+}
+
 .main-container {
     display: flex;
     flex-flow: column;
@@ -33,12 +49,12 @@ body {
 }
 
 .button-class {
-    background-color: #cd1a11;
+    background-color: var(--cgbn-red);
     font-family: "Roboto", sans-serif;
     font-size: 25px;
     font-weight: bold;
     text-transform: uppercase;
-    color: white;
+    color: var(--text);
     border: none;
     margin: 10px;
     height: clamp(40px, 30px + 5vh, 80px);
@@ -50,7 +66,7 @@ body {
 }
 
 .button-class:hover, .button-class:active {
-    background-color: #f0a8a4;
+    background-color: var(--cgbn-red-hover-light);
     transform: scale(1.1);
 }
 
@@ -70,11 +86,11 @@ body {
 }
 
 .hamburger:hover {
-    background-color: #AAAAAA;
+    background-color: var(--hamburger-hover);
 }
 
 .hamburger.is-active:hover {
-    background-color: #85130c;
+    background-color: var(--cgbn-red-hover-dark);
 }
 
 .material-symbols-outlined {
@@ -89,7 +105,7 @@ body {
     overflow: hidden;
     position: absolute;
     z-index: 10;
-    background-color: #cd1a11;
+    background-color: var(--cgbn-red);
     width: 100%;
     height: 100%;
     top: 0px;
@@ -107,7 +123,7 @@ body {
 }
 
 .hamburger-menu-container, a {
-    color: white;
+    color: var(--text);
     font-family: "Roboto", sans-serif;
     font-size: 1.5rem;
 }
