--- a/style.css
+++ b/style.css
@@ -104,22 +104,55 @@ body {
 .hamburger-menu-container {
     overflow: hidden;
     position: absolute;
-    z-index: 10;
+    z-index: -1;
     background-color: var(--cgbn-red);
     width: 100%;
     height: 100%;
     top: 0px;
-    left: 100vw;
+    left: 0vw;
     transition: 0.35s;
     transition-property: all;
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
+    opacity: 0;
+    pointer-events: none;
 }
 
 .hamburger-menu-container.is-active {
-    left: 0vw;
+    animation: open-hamburger 0.4s forwards;
+}
+
+@keyframes open-hamburger {
+    0% {
+        left: 0vw;
+        z-index: -1;
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    1%{
+
+        left: 100vw;
+        z-index: -1;
+        opacity: 0;
+        pointer-events: none;
+    }
+
+    2% {
+        left: 100vw;
+        z-index: 10;
+        opacity: 1;
+        pointer-events: all;
+    }
+    
+    100% {
+        left: 0vw;
+        z-index: 10;
+        opacity: 1;
+        pointer-events: all;
+    }
 }
 
 .hamburger-menu-container, a {
