--- a/style.css
+++ b/style.css
@@ -147,3 +147,9 @@ html,body{
     height: 100vh;
     width: 100vw;
 }
+
+.theme-button {
+    background: none;
+    border: none;
+    margin-bottom: 5px;
+}
